--- a/src/styles.css
+++ b/src/styles.css
@@ -2,63 +2,63 @@
   font-family: sans-serif;
   text-align: center;
 }
-.carousel-conatainer{
+.carousel-conatainer {
   box-sizing: border-box;
 }
-.carousel{
-  width:300px;
-  overflow:hidden;
-  transform-style:preserve-3d;
-
+.carousel {
+  width: 300px;
+  overflow: hidden;
+  transform-style: preserve-3d;
 }
-.carousel-photo{
+.carousel-photo {
   opacity: 0;
   position: absolute;
-  top:0;
+  top: 0;
   width: 100%;
   margin: auto;
   padding: 1rem 4rem;
   z-index: 100;
-  transition: transform .5s, opacity .5s, z-index .5s;
-
+  transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
 }
 .carousel-photo.initial,
-.carousel__photo.active {
+.carousel-photo.active {
   opacity: 1;
   position: relative;
   z-index: 900;
 }
-.carousel-btn-prev,.carousel-btn-next{
-  position:absolute;
-  top:50%;
+.carousel-btn-prev,
+.carousel-btn-next {
+  position: absolute;
+  top: 50%;
   width: 3rem;
   height: 3rem;
-  background-color: #FFF;
-  transform:translateY(50%);
+  background-color: #fff;
+  transform: translateY(50%);
   border-radius: 50%;
-  cursor: pointer; 
+  cursor: pointer;
   z-index: 1001; /* Sit on top of everything */
   border: 1px solid black;
 }
-.carousel-btn-next{
-  right:0;
+.carousel-btn-next {
+  right: 0;
 }
-.carousel-btn-prev{
-  left:0;
+.carousel-btn-prev {
+  left: 0;
 }
-.carousel-btn-prev::after,.carousel-btn-next::after{
-  content:" ";
-  position:absolute;
-  width:10px;
-  height:10px;
-  top:50%;
-  left:54%;
-  border-right:2px solid black;
-  border-bottom:2px solid black;
-  transform:translate(-50%,-50%) rotate(135deg);
+.carousel-btn-prev::after,
+.carousel-btn-next::after {
+  content: " ";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 50%;
+  left: 54%;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  transform: translate(-50%, -50%) rotate(135deg);
 }
-.carousel-btn-next::after{
-  transform:translate(-50%,-50%) rotate(-45deg);
+.carousel-btn-next::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 .carousel-photo.prev,
 .carousel-photo.next {
@@ -70,6 +70,3 @@
 .carousel-photo.next {
   transform: translateX(100%); /* Move 'next' item to the right */
 }
-
-
-
